Fix #239 -- missing color after # in jquery ui CSS file

--- a/themes/jquery_ui/fruit/jquery-ui-1.7.2.custom.css
+++ b/themes/jquery_ui/fruit/jquery-ui-1.7.2.custom.css
@@ -50,9 +50,9 @@
 ----------------------------------*/
 .ui-widget { font-family: Helvetica, Arial, sans-serif; font-size: 1.1em; }
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Helvetica, Arial, sans-serif; font-size: 1em; }
-.ui-widget-content { border: 1px solid #; background: #F3F8E2 url(images/ui-bg_flat_0_F3F8E2_40x100.png) 50% 50% repeat-x; color: #505050; }
+.ui-widget-content { border: 1px solid #aaa; background: #F3F8E2 url(images/ui-bg_flat_0_F3F8E2_40x100.png) 50% 50% repeat-x; color: #505050; }
 .ui-widget-content a { color: #505050; }
-.ui-widget-header { border: 1px solid #; background: #A1BE3C url(images/ui-bg_highlight-soft_40_A1BE3C_1x100.png) 50% 50% repeat-x; color: #ffffff; font-weight: bold; }
+.ui-widget-header { border: 1px solid #aaa; background: #A1BE3C url(images/ui-bg_highlight-soft_40_A1BE3C_1x100.png) 50% 50% repeat-x; color: #ffffff; font-weight: bold; }
 .ui-widget-header a { color: #ffffff; }
 
 /* Interaction states
